js262/test/language/module-code/parse-err-decl-pos-export-for-of-const.js


/*---
description: Statement cannot contain an `export` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

for (const y of [])
  export default null;
